This file documents the revision history for the SNClient+ agent.

next:
         - update node exporter to 1.8.0
         - add native aarch64 (arm64) packages for windows
         - add support for extending default filter/warn/crit
         - check_service: use cgroup pids if no main pid available
         - fix missing scripts in inventory

0.23     Mon Apr 15 17:29:53 CEST 2024
         - fix detecting mounted volumes on windows
         - add ca option for client certificates (Gent00157)

0.22     Sat Apr  6 21:15:06 CEST 2024
         - fix check_mount checking options
         - check_mount skip default filter if mount point specified
         - improve documentation

0.21     Thu Mar 28 17:18:25 CET 2024
         - add http config ini includes
         - add osx pkg uninstaller
         - add check_eventlog support for unique-index (mlueckert)
         - add check_os_version add os name
         - add os and version to inventory
         - add check_mount windows volumes
         - add check_drivesize total macros
         - make doc tables long lines more readable
         - enable script aliases without enabling external scripts
         - update windows build framework to wix 3.14.1
         - rename build artifacts to use less confusing name (amd/arm)
         - check_mount make fstype comparison case insensitive
         - change minimum golang requirement to 1.22
         - fix check_files max-depth and empty-syntax
         - fix check_memory human readable free value

0.20     Fri Mar 15 14:12:35 CET 2024
         - add support for perf-syntax
         - check_wmi: add performance data
         - check_wmi: add support for empty-syntax
         - update check_nsc_web to v0.7.1
         - check_service: fix json error
         - update windows build framework to wix 3.14
         - improve wmi stability
         - add regexp replacement macro post processor
         - add if/else conditionals to *-syntax templates